@@ -168,6 +168,7 @@
 		<script type="text/javascript" src="js/event/nomads/estevan.js"></script>
 		<script type="text/javascript" src="js/event/nomads/cale.js"></script>
 		<script type="text/javascript" src="js/event/nomads/magnus.js"></script>
+		<script type="text/javascript" src="js/event/nomads/cavalcade.js"></script>
 		
 		<script type="text/javascript" src="js/event/outlaws/maria.js"></script>
 		
