@@ -98,6 +98,7 @@ Scenes.Cale = {};
 
 // Schedule
 Cale.prototype.IsAtLocation = function(location) {
+	location = location || party.location;
 	if(location == world.loc.Plains.Nomads.Fireplace)
 		return cale.flags["Met"] != 0 && (world.time.hour >= 15 || world.time.hour < 3);
 	return false;
