@@ -20,6 +20,7 @@ Version 0.3k
 * Bruiser job added. Pending balance. Miranda has it by default (and will be able to teach it later), but for now, it is locked for the player.
 * Cale the wolf added to Nomads' camp. Co-written by me and QB/LD.
 * Estevan the satyr added (he's still kind of placeholder, but he at least talks now)
+* Rosalin's schedule has been altered slightly, she can now be encountered between 10 and 2.
 
 --------------------------------------------
              PREVIOUS VERSIONS
